# finapi-finsentiment

./: .coverage  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
dashboard/: api_client.py  app.py  charts.py
data/: finapi.db
finapi/: app.py  db.py  models.py  prices.py  sentiment.py
finapi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
finapi/etl/: news_etl.py  prices_etl.py
scripts/: enrich_sentiment.py  run_etl.py
tests/: conftest.py  test_app_health.py  test_history_validation.py  test_integration.py  test_sentiment.py
