[project]
name = "finapi"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["finapi*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B905"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
omit = [
    "finapi/etl/*",
]